--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,68 +1,98 @@
-p {
-    color: black;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: Inter;
 }
 
-.file-container {
-    width: 200px;
-    height: 40px;
-    position: relative;
+body {
+  padding: 5rem 10rem;
+  background-color: #3977c9;
 }
 
-.overlapped {
-    position: absolute;
-    top: 0; left: 0; bottom: 0; right: 0; margin: 0;
-    opacity: 0.1;
-    width: 100%;
+main {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 1rem;
 }
 
-.overlap {
-    position: absolute;
-    top: 0; left: 0; bottom: 0; right: 0; margin: 0;
-    width: 100%;
-    background: #eee;
-    border-radius: 5px;
-    line-height: 40px;
-    text-align: center;
+#card_body {
+  border: 1px solid #000;
+  background-color: rgb(236, 230, 230);
+  padding: 1rem 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+  align-self: stretch;
+  width: 100%;
+  height: fit-content;
+  border-radius: 0.2rem;
 }
 
-.text-preview {
-    height: 200px;
-    width: 100%;
-    border: 1px dashed black;
-    border-radius: 5px;
+#card_body_nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-self: stretch;
+  width: 100%;
 }
 
-.drop-area {
-    height: 200px;
-    width: 100%;
-    border: 1px dashed red;
-    border-radius: 5px;
+.card_name {
+  width: auto;
+  display: flex;
+  align-self: stretch;
+  color: #0d1421;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
 }
 
+.card_body_menu_button {
+  gap: 0.1rem;
+  border: none;
+  background-color: rgb(236, 230, 230);
+  cursor: pointer;
+  color: #8d8d8d;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.5rem;
+}
 
-.items {
-    list-style-type: none;
-    padding-left: 0;
+.card_body_content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-self: stretch;
 }
-.items-item {
-    border: 1px solid #999;
-    padding: 10px;
-    margin-bottom: -1px;;
-    cursor: pointer;
-    list-style-type: none;
+
+.task {
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  align-self: stretch;
+  gap: 0.5rem;
 }
-.items-item:first-child {
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+
+.task_content {
+  padding: 0.5rem 0.2rem;
+  border-radius: 0.3rem;
+  border: 1px solid #eaecf0;
+  background-color: #fff;
+  display: flex;
+  color: #0d1421;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5rem;
 }
-.items-item:last-child {
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-.items-item.dragged {
-    border-radius: 10px;
-    position: absolute;
-    z-index: 999;
-    pointer-events: none;
-    background: #fff;
+
+.card_body_add_button button {
+  border: none;
+  background-color: rgb(236, 230, 230);
+  cursor: pointer;
 }
