--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,139 +1,205 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: Inter;
-}
-
 body {
-  padding: 5rem 10rem;
-  background-color: #3977c9;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.2;
+    color: #333;
+    background-color: rgb(92, 144, 241);
 }
 
-main {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  gap: 1rem;
+h1 {
+    padding-left: 4px;
+    font-size: 16px;
+    color: rgb(76, 76, 76);
 }
 
-#card_body {
-  border: 1px solid #000;
-  background-color: rgb(236, 230, 230);
-  padding: 1rem 0.5rem;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 1rem;
-  align-self: stretch;
-  width: 100%;
-  height: fit-content;
-  border-radius: 0.2rem;
+.app_container {
+    display: flex;
+    justify-content: space-between;
 }
 
-#card_body_nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-self: stretch;
-  width: 100%;
-}
-
-.card_name {
-  width: auto;
-  display: flex;
-  align-self: stretch;
-  color: #0d1421;
-  font-size: 1rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 1.5rem;
-}
-
-.card_body_menu_button {
-  gap: 0.1rem;
-  border: none;
-  background-color: rgb(236, 230, 230);
-  cursor: pointer;
-  color: #8d8d8d;
-  font-size: 1.5rem;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 1.5rem;
-}
-
-.card_body_content {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-self: stretch;
+.column {
+    box-sizing: border-box;
+    padding: 8px;
+    width: 32.5%;
+    height: 1%;
+    border-radius: 3px;
+    background-color: rgb(213, 220, 232);
 }
 
 .task {
-  width: auto;
-  display: flex;
-  flex-direction: column;
-  align-self: stretch;
-  gap: 0.5rem;
+    box-sizing: border-box;
+    cursor: pointer;
+    margin-bottom: 10px;
+    padding: 1px 4px;
+    border-radius: 3px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 4px 4px 12px 4px rgba(0, 0, 0, 0.1);
 }
 
-.task_content {
-  display: flex;
-  flex-direction: row;
-  border: 1px solid #eaecf0;
-  background-color: #fff;
-  justify-content: space-between;
-  /* width: 100%; */
+.task.dragged {
+    cursor: grabbing;
+    margin-bottom: 10px;
+    padding: 1px 4px;
+    border-radius: 3px;
+    position: absolute;
+    z-index: 999;
+    pointer-events: none;
+    background: #fff;
+
+    -webkit-transform: rotate(5deg);
+    -moz-transform: rotate(5deg);
+    -o-transform: rotate(5deg);
+    -ms-transform: rotate(5deg);
+    transform: rotate(5deg);
 }
 
-.task_text {
-  width: 100%;
-  border: none;
-  padding: 0.5rem 0.3rem;
-  border-radius: 0.3rem;
-  display: flex;
-  color: #0d1421;
-  font-size: 1rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.5rem;
-  display: flex;
-  font-family: Inter;
+.picture {
+    width: 100%
 }
 
-.task_del_button {
-  gap: 1rem;
-  display: none;
-  border: none;
-  background-color: rgb(255, 255, 255);
-  width: 1.2rem;
-  height: 1.2rem;
-  cursor: pointer;
+.add_card {
+    color: rgb(145, 150, 157);
+    cursor: pointer;
+    text-decoration: none;
 }
 
-.add_tiket {
-  border: none;
-  display: block;
-  background-color: rgb(236, 230, 230);
-  cursor: pointer;
+.dialog_box {
+    position: relative;
+    display: block;
 }
 
-.task_content:hover .task_del_button {
-  display: block;
+.input_file {
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0; margin: 0;
+    opacity: 0;
 }
 
+.button_action {
+    display: inline-flex;
+    width: 100%;
+    height: 30px;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5px;
 
-.task_content.dragged {
-  border-radius: 10px;
-  position: absolute;
-  z-index: 999;
-  pointer-events: none;
-  background: #fff;
+    background-color: rgb(145, 150, 157);
+    border-radius: 3px;
+    border: none;
+    box-shadow: 4px 4px 12px 4px rgba(0, 0, 0, 0.1);
 }
 
-/* .task_content.dragged {
-  position: absolute;
-  display: inline-block;
-  background-color: rgb(236, 230, 230);
-} */
+.textarea_task {
+    width: 97%;
+    margin-bottom: 10px;
+    padding-left: 5px;
+    padding-top: 5px;
+    border: none;
+    outline: none;
+    border-radius: 3px;
+    resize: none;
+    border: none;
+    /* pointer-events: none; */
+    box-shadow: 4px 4px 12px 4px rgba(0, 0, 0, 0.1);
+    min-height: 60px;
+}
+
+.input_task:focus::placeholder {
+    transform: translateY(-10px);
+  }
+
+.button_add {
+    display: inline-block;
+    width: 35%;
+    height: 30px;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+
+    background-color: rgb(87, 194, 85);
+    border-radius: 3px;
+    border: none;
+    box-shadow: 4px 4px 12px 4px rgba(0, 0, 0, 0.1);
+}
+
+.span_closed {
+    display: inline-block;
+    cursor: pointer;
+    margin-left: 15px;
+    height: 30px;
+    font-weight: bold;
+    color: rgb(145, 150, 157);
+}
+
+.conainer_remove {
+    display: inline-block;
+    cursor: pointer;
+}
+
+.shadow_element {
+    background-color: rgb(182, 182, 182);
+    border-radius: 3px;
+    margin-bottom: 10px;
+}
+
+.closed_element {
+    position: absolute;
+    display: inline-block;
+    cursor: pointer;
+    /* margin-left: 15px; */
+    font-weight: bold;
+    color: rgb(145, 150, 157);
+}
+
+.display_none {
+    display: none;
+}
+
+.container_image {
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.preview_image {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.delete_preview {
+    position: absolute;
+    top: 1%; left: 93%; bottom: 0; right: 0; margin: 0;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: bold;
+    color: rgb(145, 150, 157);
+}
+
+@media (max-width: 767px) {
+    .app_storage {
+        display: flex;
+    }
+
+    .button_action {
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .app_container,
+    .app_storage {
+        flex-direction: column;
+    }
+
+    .column {
+        box-sizing: border-box;
+        margin: auto;
+        margin-bottom: 10px;
+        width: 70%;
+        height: 1%;
+        border-radius: 3px;
+        background-color: rgb(213, 220, 232);
+    }
+}
